--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -87,6 +87,6 @@ figure.w-richtext-align-floatright figcaption {
 }
 
 .w-richtext a {
-	background-color: #120065;
+	background-color: #1300657e;
 	color: #fff;
 }
