--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -86,6 +86,6 @@ figure.w-richtext-align-floatright figcaption {
 	color: #666
 }
 
-.w-richtext a:hover {
+.w-richtext a {
 	text-decoration: underline
 }
