--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -16,11 +16,11 @@ div.w-richtext h3 {
 div.w-richtext p,
 li,
 ul {
-	font-family: 'Neue Haas Grotesk';
+	font-family: 'Palatino Linotype';
 	font-size: 24px;
 	font-weight: 500;
-	line-height: 32px;
-	margin: 16px 0;
+	line-height: 36px;
+	/* margin: 16px 0; */
 	color: #333;
 	letter-spacing: 1px
 }
