--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -17,12 +17,12 @@ div.w-richtext p,
 li,
 ul {
 	font-family: 'Palatino Linotype';
-	font-size: 24px;
+	font-size: 26px;
 	font-weight: 500;
 	line-height: 36px;
 	/* margin: 16px 0; */
 	color: #333;
-	letter-spacing: 1px
+	/* letter-spacing: 1px */
 }
 
 div.w-richtext p strong {
