--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -20,7 +20,7 @@ ul {
 	font-size: 26px;
 	font-weight: 500;
 	line-height: 36px;
-	/* margin: 16px 0; */
+	margin: 16px 0;
 	color: #333;
 	/* letter-spacing: 1px */
 }
