--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -16,10 +16,10 @@ div.w-richtext h3 {
 div.w-richtext p,
 li,
 ul {
-	font-family: 'Scheherazade';
-	font-size: 36px;
+	font-family: 'Goudy Bookletter 1911';
+	font-size: 26px;
 	font-weight: 500;
-	line-height: 40px;
+	line-height: 36px;
 	margin: 16px 0;
 	color: #333;
 	/* letter-spacing: 1px */
