--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -16,7 +16,7 @@ div.w-richtext h3 {
 div.w-richtext p,
 li,
 ul {
-	font-family: 'Goudy Bookletter 1911';
+	font-family: 'Lora';
 	font-size: 26px;
 	font-weight: 500;
 	line-height: 36px;
