--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -16,8 +16,8 @@ div.w-richtext h3 {
 div.w-richtext p,
 li,
 ul {
-	font-family: 'Lora';
-	font-size: 24px;
+	font-family: 'Palatino Linotype';
+	font-size: 26px;
 	font-weight: 500;
 	line-height: 36px;
 	margin: 16px 0;
