--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -87,5 +87,9 @@ figure.w-richtext-align-floatright figcaption {
 }
 
 .w-richtext a {
-	text-decoration: underline
+	text-decoration: underline;
+}
+
+.w-richtext a.highlight {
+	text-decoration: none;
 }
