Twitter sharing updated to blockquote.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -90,3 +90,7 @@ figure.w-richtext-align-floatright figcaption {
 .w-richtext a {
 	text-decoration: underline;
 }
+
+.w-richtext a.highlight {
+	text-decoration: none !important;
+}
