Reduced blockquote size.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -40,6 +40,15 @@ ul li {
 	margin: 0;
 }
 
+div.w-richtext blockquote {
+	font-family: 'Neue Haas Grotesk';
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 24px;
+	border-left: none;
+	margin: 16px;
+}
+
 ::selection {
 	background: #cef1fc;
 }
